[gd_scene load_steps=23 format=3 uid="uid://cwsor1umju752"]

[ext_resource type="Texture2D" uid="uid://bet0c82ammxe4" path="res://assets/player/player.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cpw6utorrdmva" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Material" uid="uid://cyylxrrgf7n3j" path="res://assets/player/player_outline.tres" id="2_sweqy"]
[ext_resource type="AudioStream" uid="uid://bykh81q7v0k6d" path="res://assets/player/jump.wav" id="4_hqtel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(126, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(144, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(162, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(180, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_4flbx")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_4flbx")
region = Rect2(36, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_4flbx")
region = Rect2(216, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("1_4flbx")
region = Rect2(198, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("1_4flbx")
region = Rect2(252, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_4flbx")
region = Rect2(36, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(54, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("1_4flbx")
region = Rect2(72, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("1_4flbx")
region = Rect2(90, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("1_4flbx")
region = Rect2(108, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("1_4flbx")
region = Rect2(234, 0, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_i3pqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"duck",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"duck_walk",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"jump",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}],
"loop": true,
"name": &"jump_start",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"push_box",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}],
"loop": true,
"name": &"run",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}],
"loop": true,
"name": &"wall_slide",
"speed": 5.0
}]

[node name="Player" type="Node2D" groups=["player"]]
y_sort_enabled = true

[node name="player" type="CharacterBody2D" parent="." groups=["player"]]
z_index = 1
material = ExtResource("2_sweqy")
collision_layer = 2
collision_mask = 31
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_onrkg")

[node name="player_animations" type="AnimatedSprite2D" parent="player" groups=["player"]]
sprite_frames = SubResource("SpriteFrames_i3pqv")
animation = &"idle"

[node name="outline_animations" type="AnimatedSprite2D" parent="player"]
z_index = 3
material = ExtResource("2_sweqy")
sprite_frames = SubResource("SpriteFrames_i3pqv")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(2, 2)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="coyote_timer" type="Timer" parent="player"]
wait_time = 0.15
one_shot = true

[node name="jump" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("4_hqtel")

[node name="wall_jump_x_velo" type="Timer" parent="player"]
wait_time = 0.15
one_shot = true

[node name="wall_jump_reset" type="Timer" parent="player"]
wait_time = 0.5
one_shot = true

[node name="skin_change_timer" type="Timer" parent="player"]
wait_time = 0.25
one_shot = true

[node name="jump_buffer_timer" type="Timer" parent="player"]
wait_time = 0.3
one_shot = true

[node name="drop_timer" type="Timer" parent="player"]
wait_time = 0.25
one_shot = true

[node name="box_grabber" type="PinJoint2D" parent="player"]
node_a = NodePath("..")
disable_collision = false
angular_limit_enabled = true
